# gst-pipeline-editor

./: CMakeLists.txt  README.md
src/: gst-pe-config.h.in  gst-pipeline-editor.c  gst-pipeline-editor.h  main.c
